[package]
edition = "2021"
name = "pong"
version = "0.1.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = {version = "0.9", features = [
  #  "dynamic", 
  "tga",
]}
bevy-inspector-egui = "0.15.0"
bevy-inspector-egui-rapier = {version = "0.9", features = ["rapier3d"]}
bevy_rapier3d = {version = "0.19.0", features = ["debug-render", "simd-stable"]}
rand = "0.8.5"

[target.wasm32-unknown-unknown]
runner = "wasm-server-runner"

[profile.release]
lto = "thin"
opt-level = "s"
