[package]
edition = "2021"
name = "pong"
version = "0.1.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = {version = "0.10.1", features = [
  # "dynamic",
  "tga",
]}
bevy-inspector-egui = "0.18.3"
# Not yet on bevy 0.10
# bevy-inspector-egui-rapier = {version = "0.9", features = ["rapier3d"]}
bevy_rapier3d = {version = "0.21.0", features = ["debug-render", "simd-stable"]}
#rand = "0.8.5"

[profile.release]
lto = "thin"
opt-level = "s"
